fixing pdf stretch 3

--- a/src/style.css
+++ b/src/style.css
@@ -370,6 +370,7 @@ form input[type="submit"]:hover {
 
 .resume {
   width: 100%;
+  height: auto;
   margin-bottom: 10px;
   margin-top: 20px;
   border: 2px solid var(--main-color);
@@ -427,6 +428,9 @@ form input[type="submit"]:hover {
   .sectionHeader {
     font-size: 1.8rem;
   }
+  .resume {
+    height: 600px;
+  }
 }
 
 @media (max-width: 600px) {
@@ -438,6 +442,9 @@ form input[type="submit"]:hover {
 @media (max-width: 500px) {
   .sectionHeader {
     font-size: 1.2rem;
+  }
+  resume {
+    height: 400px;
   }
 }
 
